--- a/app/src/main/res/layout/mainlayout.xml
+++ b/app/src/main/res/layout/mainlayout.xml
@@ -7,8 +7,19 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Nome"
+        android:id="@+id/txtNome" />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/edtNome"
+        android:layout_below="@+id/txtNome"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Email"
-        android:id="@+id/txtEmail"/>
+        android:id="@+id/txtEmail"
+        android:layout_below="@+id/edtNome"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -38,6 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Cadastrar"
+        
         android:id="@+id/btnCadastrar"
         android:layout_below="@+id/btnEntrar"/>
 
