--- a/app/src/main/res/layout/telacadastro.xml
+++ b/app/src/main/res/layout/telacadastro.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:text="Email"
         android:id="@+id/txtEmail"
-        android:layout_below="@+id/edtNome"/>
+        android:layout_below="@+id/edtNome" />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,24 +30,26 @@
         android:layout_height="wrap_content"
         android:text="Senha"
         android:id="@+id/txtSenha"
-        android:layout_below="@id/edtEmail"/>
+        android:layout_below="@+id/edtEmail" />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/edtSenha"
         android:layout_below="@+id/txtSenha"
         android:inputType="textPassword"/>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Entrar"
+        android:text="Cadastrar"
+        android:id="@+id/btnCadastrar"
         android:layout_below="@+id/edtSenha"
-        android:id="@+id/btnEntrar"/>
+        android:onClick="criarUsuario"/>
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Voltar"
-        android:id="@+id/btnVoltar"
-        android:layout_below="@+id/btnEntrar"/>
+        android:layout_below="@+id/btnCadastrar"
+        android:id="@+id/btnVoltar"/>
 
 </RelativeLayout>
